# Compiler-Adventure

./: .clang-format  README.md
CPP-LLVM/: meson.build
CPP-LLVM/Include/: IDumpable.hh  PtrUtils.hh
CPP-LLVM/Include/AST/: AST.hh  BaseExpression.hh  BinaryExpression.hh  CallExpression.hh  FunctionStatement.hh  NumberExpression.hh  Program.hh  PrototypeStatement.hh  VariableExpression.hh
CPP-LLVM/Include/Codegen/: CodegenContext.hh  CodegenResult.hh  ICodegenable.hh
CPP-LLVM/Include/Lexer/: ILexer.hh  Lexer.hh  Tokens.hh
CPP-LLVM/Include/Parser/: Diagnostic.hh  Diagnostician.hh  IDiagnostician.hh  IParse.hh  Parser.hh
CPP-LLVM/Source/: Program.cc
CPP-LLVM/Source/AST/: BaseExpression.cc  BinaryExpression.cc  CallExpression.cc  FunctionStatement.cc  NumberExpression.cc  Program.cc  PrototypeStatement.cc  VariableExpression.cc
CPP-LLVM/Source/Codegen/: CodegenContext.cc  CodegenResult.cc
CPP-LLVM/Source/Lexer/: Lexer.cc  Tokens.cc
CPP-LLVM/Source/Parser/: Diagnostician.cc  Parser.cc
Glyph/: .clang-format  .gitignore  Glyph.G4  SyntaxExample.glyph  meson.build
Glyph/.antlr/: FunctionalLanguageLexer.interp  FunctionalLanguageLexer.java  Glyph.interp  Glyph.tokens  GlyphLexer.interp  GlyphLexer.java  GlyphLexer.tokens  GlyphParser.java
Glyph/Source/: Macros.hh  Program.cc
Glyph/Source/AST/: AST.cc  AST.hh  Value.hh
Glyph/Source/Bytecode/: BytecodeChunk.cc  BytecodeChunk.hh  BytecodeCompiler.cc  BytecodeCompiler.hh  BytecodeCompilerVisitor.cc  BytecodeCompilerVisitor.hh  BytecodeInstruction.cc  BytecodeInstruction.hh  BytecodeStepResult.hh
Glyph/Source/Lexer/: Lexer.cc  Lexer.hh  Token.cc  Token.hh
Glyph/Source/Parser/: Diagnostics.cc  Diagnostics.hh  Parser.cc  Parser.hh
Glyph/Source/Runtime/: ConstantTable.cc  ConstantTable.hh  Value.cc  Value.hh
Glyph/Source/Visitors/: ASTPrinterVisitor.cc  ASTPrinterVisitor.hh  ConsoleDebugVisitor.hh  IASTVisitor.cc  IASTVisitor.hh
JLox/: .gitignore  Grammar  JLox.sln  Program.cs  README.md  Scanner.cs  TestExamples.ps1  TokenType.cs
JLox/Examples/: Arithmetic.lox  Branching.lox  Class.lox  Closures.lox  Comparison.lox  ControlFlow.lox  Datatypes.lox  Fibonacchi.lox  ForLoop.lox  Function.lox  LogicalOperator.lox  Precedence.lox  Print.lox  Scope.lox  Statements.lox  Variables.lox  WhileLoop.lox
JLox/src/: ICallable.cs  Interpreter.cs  LoxEnvironment.cs  LoxFunction.cs  Native.cs  ParseException.cs  Parser.cs  Program.cs  Resolver.cs  Scanner.cs  Stringify.cs  Token.cs  TokenType.cs
JLox/src/AST/: AstPrinter.cs
JLox/src/Exceptions/: ParseException.cs  ReturnException.cs  RuntimeException.cs
JLox/src/Expr/: Expression.cs  IExpressionVisitor.cs  IVisitor.cs
JLox/src/Stmt/: IStatementVisitor.cs  Statement.cs
RLox/: Cargo.toml
RLox/src/: chunk.rs  disassembler.rs  lib.rs  main.rs  op_codes.rs  vm.rs
RLox/src/compiler/: mod.rs  parser.rs  scanner.rs  token.rs
